--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
        <main>
             <section id="tutorials">
                 <h2>Tutorials</h2>
+                    <a href="tutorial01/index.html">Tutorial 1</a>
+                    <a href="tutorial03/index.html">Tutorial 2</a>
                 <!-- 
                     Links to your tutorial assignments go here.
                     When you submit a new tutorial, add a link to it
@@ -22,6 +24,9 @@
             </section>
             <section id="homework">
                 <h2>Homework</h2>
+                    <a href="homework01/01_cssgrid/index.html">Homework 1 cssgrid</a>
+                    <a href="homework01/02_flexbox/index.html">Homework 1 flexbox</a>
+
                 <!-- 
                     Links to your Homework assignments go here.
                     When you submit a new tutorial, add a link to it
