adding inspo links

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </section>
             <section id="homework">
                 <h2>Homework</h2>
-                    <a href="homework01/01_cssgrid/index.html">Homework 1 cssgrid</a>
-                    <a href="homework01/02_flexbox/index.html">Homework 1 flexbox</a>
+                    <a href="hw01/01_cssgrid/index.html">Homework 1 cssgrid</a>
+                    <a href="hw01/02_flexbox/index.html">Homework 1 flexbox</a>
 
                 <!-- 
                     Links to your Homework assignments go here.
@@ -35,7 +35,12 @@
             </section>
             <section id="inspiration">
                 <h2>Design Inspiration</h2>
-                <!-- 
+                    <a href="https://www.franshalsmuseum.nl/en/">Mueseum</a>
+                    <a href="https://www.nike-react.com/">Nike React</a>
+                    <a href="http://yungbld.com/">Cool Panel Inspo</a>
+                    <a href="http://madebytemple.com/">Simplicity Inspo</a>
+                    <a href="https://www.vennstudiola.com/">Cool Scrolling Effect</a>
+                    <!-- 
                     Links to 5-10 websites that inspire you
                 -->
             </section>
