Checking in my Tutorial 4 files

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <!-- stylesheets and metadata go here -->
        <title>My CS130 Homepage</title>       
        <link rel="stylesheet" href="style.css">
+       <link rel="preconnect" href="https://fonts.gstatic.com">
+       <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
    </head>
    <body>
        <!-- HTML content tags go here. Change anything you want! -->
@@ -14,36 +16,25 @@
        <main>
             <section id="tutorials">
                 <h2>Tutorials</h2>
-                    <a href="tutorial01/index.html">Tutorial 1</a>
+                    <a href="tutorial01/index.html"> Tutorial 1</a> <br> <br>
                     <a href="tutorial03/index.html">Tutorial 2</a>
-                <!-- 
-                    Links to your tutorial assignments go here.
-                    When you submit a new tutorial, add a link to it
-                    here (if applicable)
-                -->
+                </section>
             </section>
             <section id="homework">
                 <h2>Homework</h2>
-                    <a href="hw01/01_cssgrid/index.html">Homework 1 cssgrid</a>
+                    <a href="hw01/01_cssgrid/index.html">Homework 1 cssgrid</a> <br> <br>
                     <a href="hw01/02_flexbox/index.html">Homework 1 flexbox</a>
-
-                <!-- 
-                    Links to your Homework assignments go here.
-                    When you submit a new tutorial, add a link to it
-                    here (if applicable)
-                -->
             </section>
-            <section id="inspiration">
-                <h2>Design Inspiration</h2>
-                    <a href="https://www.franshalsmuseum.nl/en/">Mueseum</a>
-                    <a href="https://www.nike-react.com/">Nike React</a>
-                    <a href="http://yungbld.com/">Cool Panel Inspo</a>
-                    <a href="http://madebytemple.com/">Simplicity Inspo</a>
-                    <a href="https://www.vennstudiola.com/">Cool Scrolling Effect</a>
-                    <!-- 
-                    Links to 5-10 websites that inspire you
-                -->
-            </section>
+            <footer>
+                <p>Design Inspiration</p>
+                <ul>
+                    <li><a href="https://www.franshalsmuseum.nl/en/" class="footer">Museum</a></li>
+                    <li><a href="https://www.nike-react.com/" class="footer">Nike React</a></li>
+                    <li><a href="http://yungbld.com/" class="footer"> Cool Panel Inspo</a></li>
+                    <li><a href="http://madebytemple.com/" class="footer">Simplicity Inspo</a></li>
+                    <li><a href="https://www.vennstudiola.com/" class="footer">Cool Scrolling Effect</a></li>
+                </ul>
+            </footer>
         </main>
    </body>
 </html>
