updating my github pages

--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
             <section id="tutorials">
                 <h2>Tutorials</h2>
                     <a href="tutorial01/index.html"> Tutorial 1</a> <br> <br>
-                    <a href="tutorial03/index.html">Tutorial 2</a>
+                    <a href="tutorial03/index.html">Tutorial 2</a> <br> <br>
+                    <a href="tutorial05/font-switcher/index.html">Tutorial 5:Font Switcher</a> <br> 
+                    <a href="tutorial05/page-turner/index.html">Tutorial 5:Page Turner</a> <br>
+                    <a href="tutorial05/theme-switcher/index.html">Tutorial 5:Theme Switcher</a>
                 </section>
             </section>
             <section id="homework">
                 <h2>Homework</h2>
-                    <a href="hw01/01_cssgrid/index.html">Homework 1 cssgrid</a> <br> <br>
-                    <a href="hw01/02_flexbox/index.html">Homework 1 flexbox</a>
+                    <a href="hw01/01_cssgrid/index.html">Homework 1:Cssgrid</a> <br> 
+                    <a href="hw01/02_flexbox/index.html">Homework 1:Flexbox</a>
             </section>
             <footer>
                 <p>Design Inspiration</p>
