updating my homepage w/ hw 2

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <section id="homework">
                 <h2>Homework</h2>
                     <a href="hw01/01_cssgrid/index.html">Homework 1:Cssgrid</a> <br> 
-                    <a href="hw01/02_flexbox/index.html">Homework 1:Flexbox</a>
+                    <a href="hw01/02_flexbox/index.html">Homework 1:Flexbox</a> <br><br>
+                    <a href="hw02/index.html">Homework 2</a>
             </section>
             <footer>
                 <p>Design Inspiration</p>
