--- a/index.html
+++ b/index.html
@@ -16,20 +16,45 @@
        <main>
             <section id="tutorials">
                 <h2>Tutorials</h2>
-                    <a href="tutorial01/index.html"> Tutorial 1</a> <br> <br>
-                    <a href="tutorial03/index.html">Tutorial 2</a> <br> <br>
-                    <a href="tutorial05/font-switcher/index.html">Tutorial 5:Font Switcher</a> <br> 
-                    <a href="tutorial05/page-turner/index.html">Tutorial 5:Page Turner</a> <br>
-                    <a href="tutorial05/theme-switcher/index.html">Tutorial 5:Theme Switcher</a>
-                </section>
+                <ul>
+                    <li>
+                        <a href="tutorial01/index.html"> Tutorial 1</a> 
+                    </li> 
+                    <li>
+                       <a href="tutorial03/index.html">Tutorial 2</a>
+                    </li>
+    
+                    <li> Tutorial 5
+                        <ul>
+                            <li>
+                                <a href="tutorial05/font-switcher/index.html">Font Switcher</a> 
+                            </li>
+                            <li>
+                                <a href="tutorial05/page-turner/index.html">Page Turner</a> 
+                            </li>
+                            <li>
+                                <a href="tutorial05/theme-switcher/index.html">Theme Switcher</a> 
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="tutorial06/index.html">Tutorial 6</a>
+                    </li>
+                </ul>
             </section>
             <section id="homework">
                 <h2>Homework</h2>
-                    <a href="hw01/01_cssgrid/index.html">Homework 1:Cssgrid</a> <br> 
-                    <a href="hw01/02_flexbox/index.html">Homework 1:Flexbox</a> <br><br>
-                    <a href="hw02/index.html">Homework 2</a>
+                <ul>
+                    <li> Homework 1
+                        <ul>
+                            <li> <a href="hw01/01_cssgrid/index.html">Cssgrid</a> </li>
+                            <li> <a href="hw01/02_flexbox/index.html">Flexbox</a> </li>
+                        </ul>
+                    </li>
+                    <li>   <a href="hw02/index.html">Homework 2</a></li>
+                </ul>
             </section>
-            <footer>
+            <section id="designinspo">
                 <p>Design Inspiration</p>
                 <ul>
                     <li><a href="https://www.franshalsmuseum.nl/en/" class="footer">Museum</a></li>
@@ -38,7 +63,7 @@
                     <li><a href="http://madebytemple.com/" class="footer">Simplicity Inspo</a></li>
                     <li><a href="https://www.vennstudiola.com/" class="footer">Cool Scrolling Effect</a></li>
                 </ul>
-            </footer>
+            </section>
         </main>
    </body>
 </html>
