--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                         </ul>
                     </li>
                     <li>   <a href="hw02/index.html">Homework 2</a></li>
+                    <li> <a href="hw03/index.html">Homework 3</a></li>
                 </ul>
             </section>
             <section id="designinspo">
