--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
                     <li>
                         <a href="tutorial06/index.html">Tutorial 6</a>
                     </li>
+                    <li> 
+                        <a href="hw04/your_task/index.html">Tutorial 7</a>
+                    </li>
+                    
                 </ul>
             </section>
             <section id="homework">
